--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         Contacto
                     </a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item nav-form">
                     <form action="#">
                         <input type="text">
                         <input type="submit" value="Buscar">
