Seccion slider y productos

--- a/index.html
+++ b/index.html
@@ -55,6 +55,47 @@
                 </li>
             </ul>
         </nav>
+
+        <div class="imagen">
+            <img src="images/slide/4.jpg" alt="Imagen de China">
+        </div>
+
+        <div class="productos">
+            <div class="izquierda">
+                Izquierda
+            </div>
+            <div class="derecha">
+                <div class="producto">
+                    <h2 class="producto-title">Lampara de LED</h2>
+                    <div class="producto-contenedor">
+                        <img src="./images/lamparas/lampara1.jpg" alt="Lampara">
+                        <p>Las lamparas bipin estan compuestas por 27 LEDs tipo SMD 5060 montadas sobre una estructura tubular de 20mm de diametro</p>
+                    </div><!--cierra producto-->
+                </div>
+                <div class="producto">
+                    <h2 class="producto-title">Lampara de LED</h2>
+                    <div class="producto-contenedor">
+                        <img src="./images/lamparas/lampara1.jpg" alt="Lampara">
+                        <p>Las lamparas bipin estan compuestas por 27 LEDs tipo SMD 5060 montadas sobre una estructura tubular de 20mm de diametro</p>
+                    </div>
+                </div><!--cierra producto-->
+                <div class="producto">
+                    <h2 class="producto-title">Lampara de LED</h2>
+                    <div class="producto-contenedor">
+                        <img src="./images/lamparas/lampara1.jpg" alt="Lampara">
+                        <p>Las lamparas bipin estan compuestas por 27 LEDs tipo SMD 5060 montadas sobre una estructura tubular de 20mm de diametro</p>
+                    </div>
+                </div><!--cierra producto-->
+                <div class="producto">
+                    <h2 class="producto-title">Lampara de LED</h2>
+                    <div class="producto-contenedor">
+                        <img src="./images/lamparas/lampara1.jpg" alt="Lampara">
+                        <p>Las lamparas bipin estan compuestas por 27 LEDs tipo SMD 5060 montadas sobre una estructura tubular de 20mm de diametro</p>
+                    </div>
+                </div><!--cierra producto-->
+            </div>
+        </div>
+
     </div>
     
 </body>
