--- a/index.html
+++ b/index.html
@@ -62,7 +62,76 @@
 
         <div class="productos">
             <div class="izquierda">
-                Izquierda
+                <h2 class="producto-title2">Categorias</h2>
+                <nav class="col">
+                    <ul class="col-lista">
+                        <li class="col-item" class="col-linea">
+                            <a href="#" class="col-link">
+                                Lamparas de Cultivo
+                            </a>
+                        </li>
+                        <li class="col-item">
+                            <a href="#" class="col-link">
+                                Lamparas de LED
+                            </a>
+                        </li>
+                        <li class="col-item">
+                            <a href="#" class="col-link">
+                                Tubos de LED
+                            </a>
+                        </li>
+                        <li class="col-item">
+                            <a href="#" class="col-link">
+                                Controladoras
+                            </a>
+                        </li>
+                        <li class="col-item">
+                            <a href="#" class="col-link">
+                                Accesorios
+                            </a>
+                        </li>
+                        <li class="col-item">
+                            <a href="#" class="col-link">
+                                Disipadores
+                            </a>
+                        </li>
+                        <li class="col-item">
+                            <a href="#" class="col-link">
+                                Lamparas de Cultivo
+                            </a>
+                        </li>
+                        <li class="col-item">
+                            <a href="#" class="col-link">
+                                Lamparas de LED
+                            </a>
+                        </li>
+                        <li class="col-item">
+                            <a href="#" class="col-link">
+                                Tubos de LED
+                            </a>
+                        </li>
+                        <li class="col-item">
+                            <a href="#" class="col-link">
+                                Controladoras
+                            </a>
+                        </li>
+                        <li class="col-item">
+                            <a href="#" class="col-link">
+                                Accesorios
+                            </a>
+                        </li>
+                        <li class="col-item">
+                            <a href="#" class="col-link">
+                                Disipadores
+                            </a>
+                        </li>
+                        <li class="col-item">
+                            <a href="#" class="col-link">
+                                Lamparas de Cultivo
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
             </div>
             <div class="derecha">
                 <div class="producto">
@@ -95,6 +164,24 @@
                 </div><!--cierra producto-->
             </div>
         </div>
+
+        <div class="newsletter">
+            <img src="images/sobre.png" alt="">
+            <div class="newsletter-texto">
+                <p>
+                    <strong>Recibi nuestro newsletter</strong>
+                </p>
+                <p class="newsletter-parrafo2">Todas las noticias en tu casilla de correo</p>
+            </div>
+            <form action="" class="newsletter-form">
+                <input type="email" aria-label="Email">
+                <input type="submit" value="suscribirse">
+            </form>
+        </div>
+
+        <footer class="footer">
+            aca va el pie
+        </footer>
 
     </div>
     
